--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -50,19 +50,22 @@
   display: grid;
   grid-template-columns: auto 1fr;
 }
-.label {
-  font-weight: bold;
+.homepage-banner-wrapper .homepage-bar-wrapper .homepage-bar .label {
+  font-weight: 500;
   display: flex;
   gap: 20px;
   padding: 2rem 2.5rem;
   align-items: center;
   border-radius: 12px 0 0 12px;
- font-size: calc(25px + (40 - 30) * ((100vw - 992px) / (1920 - 992)));
+  font-size: calc(20px + (30 - 20) * ((100vw - 992px) / (1920 - 992)));
   line-height: 1;
 }
+.homepage-banner-wrapper .homepage-bar-wrapper .homepage-bar .label img {
+  width: 40px;
+}
 .product-items {
-  display: flex;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   padding: 1.7rem 2rem;
   justify-content: space-evenly;
   border-radius: 0 12px 12px 0;
@@ -71,14 +74,35 @@
 .product-items a {
  color: inherit;
  text-decoration: none;
+ padding-inline: 20px;
+ position: relative;
 }
-.product-item {
+.product-items a:after {
+ content:'';
+ position: absolute;
+ left: 0;
+ top: 10%;
+ width: 3px;
+ height: 80%;
+ background: #d9d9d9;
+ border-radius: 10px;
+}
+.product-items a:first-child:after {
+  display: none;
+}
+.product-items a .product-item {
   display: flex;
-  text-align: center;
   align-items: center;
   gap: 20px;
+  justify-content: center;
+}
+.product-items a .product-item img {
+ border-radius: 10px;
+ aspect-ratio: 1;
 }
 .product-item .product-name {
+  font-size: calc(14px + (22 - 14) * ((100vw - 992px) / (1920 - 992)));
+   line-height: 1.2;
    display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
@@ -212,15 +236,13 @@
 
                   </div>
                 </div>
-
-                <div class="product-items">
                   {% style %}
-                    .product-items{
+                    .product-items {
                       background-color: {{ block.settings.product_items_bgcolor }};
                       color: {{ block.settings.product_list_item_color }};
                     }
                   {% endstyle %}
-
+                <div class="product-items">
                   {% if block.settings.product_display_1 != blank %}
                     {% assign product = all_products[block.settings.product_display_1] %}
                     <a href="{{ product.url }}">
