--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -3,13 +3,8 @@
   "name": "Colorful Kicks Section",
   "settings": [
     {
-      "type":"header",
-      "content":"Images section"
-    },
-    {
-      "type": "image_picker",
-      "id": "product_image",
-      "label": "Left Side Product Image"
+      "type": "header",
+      "content": "Images section"
     },
     {
       "type": "image_picker",
@@ -18,18 +13,18 @@
     },
 
     {
-      "type":"header",
-      "content":"Content section"
+      "type": "header",
+      "content": "Content section"
     },
     {
-      "type":"text",
-      "id":"content_subheading",
-      "label":"Subheading"
+      "type": "text",
+      "id": "content_subheading",
+      "label": "Subheading"
     },
     {
-      "type":"text",
-      "id":"behind_the_design",
-      "label":"Behind the design",
+      "type": "text",
+      "id": "behind_the_design",
+      "label": "Behind the design"
     },
     {
       "type": "textarea",
@@ -38,43 +33,43 @@
       "default": "Discover our vibrant collection of colorblocked shoes, designed with plush memory foam for all-day comfort. With a wide range of bold shades, it’s easy to pick your perfect pair."
     },
     {
-      "type":"header",
-      "content":"Colorful content part"
+      "type": "header",
+      "content": "Colorful content part"
     },
     {
-      "type":"text",
-      "id":"colourless_content_first",
-      "label":"Colorless content first"
+      "type": "text",
+      "id": "colourless_content_first",
+      "label": "Colorless content first"
     },
     {
-      "type":"text",
-      "id":"colourful_content_first",
-      "label":"Colorful content first"
+      "type": "text",
+      "id": "colourful_content_first",
+      "label": "Colorful content first"
     },
     {
-      "type":"color",
-      "id":"colourful_content_first_color",
-      "label":"Colorful content first color"
+      "type": "color",
+      "id": "colourful_content_first_color",
+      "label": "Colorful content first color"
     },
     {
-      "type":"text",
-      "id":"colourless_content_second",
-      "label":"Colorless content second"
+      "type": "text",
+      "id": "colourless_content_second",
+      "label": "Colorless content second"
     },
     {
-      "type":"text",
-      "id":"colourful_content_second",
-      "label":"Colorful content second"
+      "type": "text",
+      "id": "colourful_content_second",
+      "label": "Colorful content second"
     },
     {
-      "type":"color",
-      "id":"colourful_content_second_color",
-      "label":"Colorful content second color"
+      "type": "color",
+      "id": "colourful_content_second_color",
+      "label": "Colorful content second color"
     },
 
     {
-      "type":"header",
-      "content":"Button settings"
+      "type": "header",
+      "content": "Button settings"
     },
     {
       "type": "text",
@@ -94,17 +89,16 @@
       "label": "Heading",
       "default": "COLORFUL KICKS,CLOUD-LIKE COMFORT"
     }
-
   ],
-  "blocks":[
+  "blocks": [
     {
-      "type":"image_showcase",
-      "name":"Showcase product",
-      "settings":[
+      "type": "image_showcase",
+      "name": "Showcase product",
+      "settings": [
         {
-          "type":"product",
-          "id":"product",
-          "label":"Product Image"
+          "type": "product",
+          "id": "product",
+          "label": "Product"
         }
       ]
     }
@@ -121,44 +115,56 @@
 <section class="colorful-kicks-section page-width">
   <div class="container">
     <div class="left">
-    <div class="text-container">
-      <h4 class="section-subheading">{{ section.settings.content_subheading }}</h4>
-      <div class="text-container-wrapper">
-        <h2 class="section-heading">{{ section.settings.colourless_content_first }}</h2>
-        <h2 class="section-heading" {% if section.settings.colourful_content_first_color %}style="color: {{ section.settings.colourful_content_first_color }};"{% endif %}>
-          {{ section.settings.colourful_content_first }}
-        </h2>
-        <h2 class="section-heading">{{ section.settings.colourless_content_second }}</h2>
-        <h2 class="section-heading">
-          {% style %}
-            {% if section.settings.colourful_content_second_color %}
-              .colorful-kicks-section .text-container-wrapper h2:last-child {
-              color: {{ section.settings.colourful_content_second_color }};
-              }
+      <div class="text-container">
+        <h4 class="section-subheading">{{ section.settings.content_subheading }}</h4>
+        <div class="text-container-wrapper">
+          <h2 class="section-heading">{{ section.settings.colourless_content_first }}</h2>
+          <h2
+            class="section-heading"
+            {% if section.settings.colourful_content_first_color %}
+              style="color: {{ section.settings.colourful_content_first_color }};"
             {% endif %}
-          {% endstyle %}
-          {{ section.settings.colourful_content_second }}
-        </h2>
+          >
+            {{ section.settings.colourful_content_first }}
+          </h2>
+          <h2 class="section-heading">{{ section.settings.colourless_content_second }}</h2>
+          <h2 class="section-heading">
+            {% style %}
+              {% if section.settings.colourful_content_second_color %}
+                .colorful-kicks-section .text-container-wrapper h2:last-child {
+                color: {{ section.settings.colourful_content_second_color }};
+                }
+              {% endif %}
+            {% endstyle %}
+            {{ section.settings.colourful_content_second }}
+          </h2>
+        </div>
+
+        <p>{{ section.settings.content_description }}</p>
       </div>
-
-
-      <p>{{ section.settings.content_description }}</p>
-     </div>
       <div class="product-image-wrapper">
         <div class="bg-text">
-         <span>
-           {{ section.settings.behind_the_design }}
-         </span>
+          <span>
+            {{ section.settings.behind_the_design }}
+          </span>
         </div>
-        {% if section.settings.product_image %}
-          <img src="{{ section.settings.product_image | img_url: 'medium' }}" alt="Product" height="100%" width="100%">
-        {% endif %}
+        {% for block in section.blocks %}
+          {% if block.type == 'image_showcase' %}
+            {% assign product = all_products[block.settings.product] %}
+            <img
+              src="{{ product.featured_image | img_url: 'medium' }}"
+              alt="{{ product.title }}"
+              height="100%"
+              width="100%"
+            >
+          {% endif %}
+        {% endfor %}
       </div>
       {% if section.settings.button_link %}
-              <a href="{{ section.settings.button_link }}" class="browse-btn">
-                {{ section.settings.button_label }}
-              </a>
-            {% endif %}
+        <a href="{{ section.settings.button_link }}" class="browse-btn">
+          {{ section.settings.button_label }}
+        </a>
+      {% endif %}
     </div>
     <div class="right">
       {% if section.settings.lifestyle_image %}
@@ -169,88 +175,88 @@
 </section>
 
 <style>
-.colorful-kicks-section {
-  padding-block: 50px;
-}
-.colorful-kicks-section .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 50px;
-  align-items: center;
-  margin: auto;
-}
-.colorful-kicks-section .container .left .text-container {
-  max-width: 700px;
-}
-.colorful-kicks-section .section-heading {
-      font-size: calc(25px + (60 - 25) * ((100vw - 360px) / (1920 - 360)));
-      margin: 10px 0;
-      line-height: 1.2;
-      font-weight: 800;
-}
-.colorful-kicks-section .section-subheading {
-   margin-block: 0;
-}
-.colorful-kicks-section .highlight {
-  color: #ff3c00;
-}
-.colorful-kicks-section p {
-  font-size: 16px;
-  color: #333;
-}
-.browse-btn {
-  display: inline-block;
-  margin-top: 20px;
-  background: #ff3c00;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 4px;
-  text-decoration: none;
-}
-.product-image-wrapper {
-  position: relative;
-  margin-top: 40px;
-}
-.product-image-wrapper .bg-text {
-  position: absolute;
-  color: #5d5d5d24;
-  top: 42%;
-  left: 7%;
-  transform: translate(0, -50%);
-  line-height: 1;
-  text-align: center;
-  z-index: 1;
-  font-weight: 800;
-  text-transform: uppercase;
-  letter-spacing: 9px;
-}
-.product-image-wrapper .bg-text .middle-content {
-     padding-left: 50%;
-}
-.product-image-wrapper img {
-  position: relative;
-  z-index: 2;
-  max-width: 100%;
-}
-.colorful-kicks-section .right {
-  flex: 1;
-  min-width: 300px;
-}
-.colorful-kicks-section .right img {
-  width: 100%;
-  border-radius: 8px;
-}
-@media(max-width: 992px) {
-.colorful-kicks-section .container {
-  grid-template-columns: 1fr;
-}
-.product-image-wrapper .bg-text {
-font-size: calc(45px + (120 - 45) * ((100vw - 360px) / (992 - 360)));
-}
-}
-@media(min-width: 992px) {
-.product-image-wrapper .bg-text {
-font-size: calc(45px + (120 - 45) * ((100vw - 992px) / (1920 - 992)));
-}
-}
+  .colorful-kicks-section {
+    padding-block: 50px;
+  }
+  .colorful-kicks-section .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+    align-items: center;
+    margin: auto;
+  }
+  .colorful-kicks-section .container .left .text-container {
+    max-width: 700px;
+  }
+  .colorful-kicks-section .section-heading {
+    font-size: calc(25px + (60 - 25) * ((100vw - 360px) / (1920 - 360)));
+    margin: 10px 0;
+    line-height: 1.2;
+    font-weight: 800;
+  }
+  .colorful-kicks-section .section-subheading {
+    margin-block: 0;
+  }
+  .colorful-kicks-section .highlight {
+    color: #ff3c00;
+  }
+  .colorful-kicks-section p {
+    font-size: 16px;
+    color: #333;
+  }
+  .browse-btn {
+    display: inline-block;
+    margin-top: 20px;
+    background: #ff3c00;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 4px;
+    text-decoration: none;
+  }
+  .product-image-wrapper {
+    position: relative;
+    margin-top: 40px;
+  }
+  .product-image-wrapper .bg-text {
+    position: absolute;
+    color: #5d5d5d24;
+    top: 42%;
+    left: 7%;
+    transform: translate(0, -50%);
+    line-height: 1;
+    text-align: center;
+    z-index: 1;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 9px;
+  }
+  .product-image-wrapper .bg-text .middle-content {
+    padding-left: 50%;
+  }
+  .product-image-wrapper img {
+    position: relative;
+    z-index: 2;
+    max-width: 100%;
+  }
+  .colorful-kicks-section .right {
+    flex: 1;
+    min-width: 300px;
+  }
+  .colorful-kicks-section .right img {
+    width: 100%;
+    border-radius: 8px;
+  }
+  @media (max-width: 992px) {
+    .colorful-kicks-section .container {
+      grid-template-columns: 1fr;
+    }
+    .product-image-wrapper .bg-text {
+      font-size: calc(45px + (120 - 45) * ((100vw - 360px) / (992 - 360)));
+    }
+  }
+  @media (min-width: 992px) {
+    .product-image-wrapper .bg-text {
+      font-size: calc(45px + (120 - 45) * ((100vw - 992px) / (1920 - 992)));
+    }
+  }
 </style>
