--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -82,12 +82,20 @@
       "id": "button_link",
       "label": "Button Link"
     },
-
     {
-      "type": "textarea",
-      "id": "heading",
-      "label": "Heading",
-      "default": "COLORFUL KICKS,CLOUD-LIKE COMFORT"
+      "type": "range",
+      "id": "interval",
+      "label": "Interval",
+      "min": 1,
+      "max": 10,
+      "step": 1,
+      "default": 3
+    },
+    {
+      "type": "checkbox",
+      "id": "show_product_info",
+      "label": "Show product info",
+      "default": false
     }
   ],
   "blocks": [
@@ -106,77 +114,95 @@
 
   "presets": [
     {
-      "name": "Colorful Kicks Block"
+      "name": "Colorful Kicks"
     }
   ]
 }
 {% endschema %}
 
+<script src="{{ 'colourful-hover.js' | asset_url }}" defer></script>
+
 <section class="colorful-kicks-section page-width">
-  <div class="container">
-    <div class="left">
-      <div class="text-container">
-        <h4 class="section-subheading">{{ section.settings.content_subheading }}</h4>
-        <div class="text-container-wrapper">
-          <h2 class="section-heading">{{ section.settings.colourless_content_first }}</h2>
-          <h2
-            class="section-heading"
-            {% if section.settings.colourful_content_first_color %}
-              style="color: {{ section.settings.colourful_content_first_color }};"
-            {% endif %}
-          >
-            {{ section.settings.colourful_content_first }}
-          </h2>
-          <h2 class="section-heading">{{ section.settings.colourless_content_second }}</h2>
-          <h2 class="section-heading">
-            {% style %}
-              {% if section.settings.colourful_content_second_color %}
-                .colorful-kicks-section .text-container-wrapper h2:last-child {
-                color: {{ section.settings.colourful_content_second_color }};
-                }
+  <colourful-hover data-interval="{{ section.settings.interval | times: 1000 }}">
+    <div class="container">
+      <div class="left">
+        <div class="text-container">
+          <h4 class="section-subheading">{{ section.settings.content_subheading }}</h4>
+          <div class="text-container-wrapper">
+            <h2 class="section-heading">{{ section.settings.colourless_content_first }}</h2>
+            <h2
+              class="section-heading"
+              {% if section.settings.colourful_content_first_color %}
+                style="color: {{ section.settings.colourful_content_first_color }};"
               {% endif %}
-            {% endstyle %}
-            {{ section.settings.colourful_content_second }}
-          </h2>
+            >
+              {{ section.settings.colourful_content_first }}
+            </h2>
+            <h2 class="section-heading">{{ section.settings.colourless_content_second }}</h2>
+            <h2 class="section-heading">
+              {% style %}
+                {% if section.settings.colourful_content_second_color %}
+                  .colorful-kicks-section .text-container-wrapper h2:last-child {
+                    color: {{ section.settings.colourful_content_second_color }};
+                  }
+                {% endif %}
+              {% endstyle %}
+              {{ section.settings.colourful_content_second }}
+            </h2>
+          </div>
+          <p>{{ section.settings.content_description }}</p>
         </div>
 
-        <p>{{ section.settings.content_description }}</p>
-      </div>
-      <div class="product-image-wrapper">
-        <div class="bg-text">
-          <span>
-            {{ section.settings.behind_the_design }}
-          </span>
+        <div class="product-image-wrapper">
+          <div class="bg-text">
+            <span>{{ section.settings.behind_the_design }}</span>
+          </div>
+          <div class="product-images-container">
+            {% for block in section.blocks %}
+              {% if block.type == 'image_showcase' %}
+                {% assign product = all_products[block.settings.product] %}
+                <div class="product-image-info" data-product-id="{{ product.id }}">
+                     <h4>{{ product.title }}</h4>
+                </div>
+                <img
+                  class="collection-image"
+                  src="{{ product.featured_image | img_url: 'medium' }}"
+                  alt="{{ product.title }}"
+                  width="600"
+                  height="600"
+                  loading="lazy"
+                  data-product-id="{{ product.id }}"
+                >
+              {% endif %}
+            {% endfor %}
+          </div>
         </div>
-        {% for block in section.blocks %}
-          {% if block.type == 'image_showcase' %}
-            {% assign product = all_products[block.settings.product] %}
-            <img
-              src="{{ product.featured_image | img_url: 'medium' }}"
-              alt="{{ product.title }}"
-              height="100%"
-              width="100%"
-            >
-          {% endif %}
-        {% endfor %}
+
+        {% if section.settings.button_link %}
+          <a href="{{ section.settings.button_link }}" class="browse-btn">
+            {{ section.settings.button_label }}
+          </a>
+        {% endif %}
       </div>
-      {% if section.settings.button_link %}
-        <a href="{{ section.settings.button_link }}" class="browse-btn">
-          {{ section.settings.button_label }}
-        </a>
-      {% endif %}
+
+      <div class="right">
+        {% if section.settings.lifestyle_image %}
+          <img src="{{ section.settings.lifestyle_image | img_url: 'master' }}" alt="Lifestyle">
+        {% endif %}
+      </div>
     </div>
-    <div class="right">
-      {% if section.settings.lifestyle_image %}
-        <img src="{{ section.settings.lifestyle_image | img_url: 'master' }}" alt="Lifestyle">
-      {% endif %}
-    </div>
-  </div>
+  </colourful-hover>
 </section>
 
 <style>
+
+  .product-image-info{
+    display: none;
+  }
+
   .colorful-kicks-section {
     padding-block: 50px;
+    overflow: hidden;
   }
   .colorful-kicks-section .container {
     display: grid;
@@ -216,6 +242,47 @@
   .product-image-wrapper {
     position: relative;
     margin-top: 40px;
+    max-height: 400px;
+    max-width: 700px;
+    overflow: hidden;
+  }
+
+  .collection-image {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+
+  .product-images-container {
+    display: flex;
+  }
+
+  .product-images-container > .collection-image{
+    width:100%;
+  }
+
+  .collection-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .product-images-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .collection-image {
+    position: relative;
+    width: 100%;
+    height: auto;
+    opacity: 0;
+    transition: opacity 1s ease;
+  }
+  .collection-image:first-child {
+    opacity: 1;
   }
   .product-image-wrapper .bg-text {
     position: absolute;
@@ -241,10 +308,14 @@
   .colorful-kicks-section .right {
     flex: 1;
     min-width: 300px;
+    overflow: hidden;
   }
   .colorful-kicks-section .right img {
     width: 100%;
+    height: 100%;
     border-radius: 8px;
+    display: block;
+    object-fit: cover;
   }
   @media (max-width: 992px) {
     .colorful-kicks-section .container {
