--- a/sections/choose-your-action.liquid
+++ b/sections/choose-your-action.liquid
@@ -21,6 +21,11 @@
           "default": "HIKING"
         },
         {
+          "type":"url",
+          "id":"collection_url",
+          "label":"Collection url"
+        },
+        {
           "type": "image_picker",
           "id": "image1",
           "label": "Top Left Image"
@@ -59,7 +64,7 @@
       <h4 class="choose-action-title">{{ section.settings.section_title }}</h4>
       <ul class="action-labels">
         {% for block in section.blocks %}
-          <li class="action-label {% if forloop.first %}active{% endif %}" data-id="label-{{ block.id }}"><a href="#">{{ block.settings.label }}</a></li>
+          <li class="action-label {% if forloop.first %}active{% endif %}" data-id="label-{{ block.id }}"><a href="{{ block.settings.collection_url }}">{{ block.settings.label }}</a></li>
         {% endfor %}
       </ul>
     </div>
