assets/colourful-hover.js

--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -96,6 +96,12 @@
       "id": "show_product_info",
       "label": "Show product info",
       "default": false
+    },
+    {
+      "type": "checkbox",
+      "id": "only_desktop",
+      "label": "only desktop",
+      "default": false
     }
   ],
   "blocks": [
@@ -161,21 +167,31 @@
             {% for block in section.blocks %}
               {% if block.type == 'image_showcase' %}
                 {% assign product = all_products[block.settings.product] %}
-                {% if section.settings.show_product_info %}
-                  <div class="product-image-info" data-product-id="{{ product.id }}">
-                    <h4>{{ product.title }}</h4>
-                  </div>
-                {% endif %}
-
-                <img
-                  class="collection-image"
-                  src="{{ product.featured_image | img_url: 'medium' }}"
-                  alt="{{ product.title }}"
-                  width="600"
-                  height="600"
-                  loading="lazy"
-                  data-product-id="{{ product.id }}"
-                >
+                    <div class="product-image-wrapper-sec">
+                      {% if section.settings.only_desktop and section.settings.show_product_info %}
+                        <div class="product-image-info" data-product-id="{{ product.id }}">
+                          <div class="img-wrap">
+                            <img src="{{ product.featured_image | img_url }}" alt="img-{{ product.title }}">
+                          </div>
+                          <h4>{{ product.title }}</h4>
+                          <div>
+                            <span>rating (23reviews)</span>
+                          </div>
+                          <span>{{ product.price | money }}</span>
+                        </div>
+                      {% endif %}
+                     <div class="product-image-wrapper-img">
+                       <img
+                               class="collection-image"
+                               src="{{ product.featured_image | img_url: 'medium' }}"
+                               alt="{{ product.title }}"
+                               width="600"
+                               height="600"
+                               loading="lazy"
+                               data-product-id="{{ product.id }}"
+                       >
+                     </div>
+                    </div>
               {% endif %}
             {% endfor %}
           </div>
@@ -245,19 +261,12 @@
   .product-image-wrapper {
     position: relative;
     margin-top: 40px;
-    max-height: 400px;
-    max-width: 700px;
-    overflow: hidden;
   }
 
   .collection-image {
-    opacity: 0;
     transition: opacity 0.5s ease;
   }
 
-  .product-images-container {
-    display: flex;
-  }
 
   .product-images-container > .collection-image{
     width:100%;
@@ -277,11 +286,32 @@
     width: 100%;
     height: 100%;
   }
+  .product-image-info span {
+    font-weight: bold;
+  }
+  .product-image-info h4 {
+    margin: 10px 0;
+  }
+ .product-image-wrapper-sec .product-image-info {
+    position: absolute;
+    right: 0;
+    background: white;
+    border-radius: 15px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    width: 45%;
+    left: 46%;
+    top: 5%;
+    padding: 32px;
+    z-index: 4;
+  }
+  .product-image-wrapper-img {
+    width: 55%;
+  }
+
   .collection-image {
     position: relative;
     width: 100%;
     height: auto;
-    opacity: 0;
     transition: opacity 1s ease;
   }
   .collection-image:first-child {
@@ -326,6 +356,12 @@
     }
     .product-image-wrapper .bg-text {
       font-size: calc(45px + (120 - 45) * ((100vw - 360px) / (992 - 360)));
+    }
+    .product-image-wrapper-sec .product-image-info {
+      display: none !important;
+    }
+    .product-image-wrapper-img {
+      width: 100%;
     }
   }
   @media (min-width: 992px) {
