--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -204,7 +204,7 @@
    ul.footer-block__details-content {
        display: flex;
        flex-direction: column;
-       gap: calc(8px + 6 * ((100vw - 360px) / (1920 - 360)));
+       gap: 10px;
    }
    .di {
        display: flex;
@@ -238,7 +238,7 @@
        color: #FFF;
    }
    .footer-menu-section {
-       margin-bottom: calc(20px + 13 * ((100vw - 360px) / (1920 - 360)));
+       margin-bottom: calc(0px + 23 * ((100vw - 360px) / (1920 - 360)));
    }
    footer  .search-section-block-footer {
        display: flex;
@@ -333,7 +333,7 @@
            width: 100%;
        }
        .search-section-block-footer .birthday-section .field__input {
-           max-width: 100%;
+           max-width: 100% !important;
        }
        .newsletter-form {
            margin-top: 0;
